--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.12.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
@@ -39,6 +40,7 @@
     "jwt-decode": "^2.2.0",
     "meta-ctrl-enter": "^1.0.2",
     "nuxt": "^2.9.2",
+    "sass": "^1.54.0",
     "shelljs": "^0.8.3",
     "snyk": "^1.232.0",
     "ua-parser-js": "^0.7.20",
@@ -84,7 +86,6 @@
     "jest": "^25.1.0",
     "jsdom": "^16.1.0",
     "loglevel": "^1.6.7",
-    "node-sass": "^4.12.0",
     "nodemon": "^2.0.0",
     "prettier": "^2.0.1",
     "sass-loader": "^8.0.0",
