update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@staart/ui",
+  "name": "@aasani-technologies/ui",
   "version": "1.0.0",
   "description": "Frontend admin UI for Staart",
   "author": "Anand Chowdhary",
