--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "which-browser": "^0.5.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
     "@bazzite/nuxt-netlify": "^0.1.1",
     "@nuxt/typescript-build": "^0.6.0",
     "@nuxt/typescript-runtime": "^0.4.0",
